[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comai"
version = "0.1.0"
description = "CLI tool for interacting with CommuneAI blockchain"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "typer>=0.9.0",
    "rich>=13.4.2",
    "substrate-interface>=1.4.0",
    "pydantic>=2.4.0",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "mypy>=1.3.0",
]

[project.scripts]
comai = "src.cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
